--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
           </button>
         </div>
 
-        <div class="sectionTitle">Цвета и поверхности</div>
+        <div class="sectionTitle">Выберите цвет и жмите на кнопку</div>
         <div class="swatchRow" id="colorRow"></div>
       </div>
       </div>
 
       <footer class="detailCta">
-        <button id="btnViewAR" class="btnPrimary" type="button">Посмотреть в AR</button>
+        <button id="btnViewAR" class="btnPrimary" type="button"><span class="btnPrimaryText">Магия Актив Групп</span><img class="btnPrimaryLogo" src="assets/ui/active_group_logo.png" alt="Актив Групп" /></button>
       </footer>
     </section>
 
