--- a/index.html
+++ b/index.html
@@ -133,20 +133,12 @@
         <div class="monotonePaletteBlock">
           <div class="monotonePaletteTitle">Цветовая гамма Однотонная</div>
           <div class="monotonePaletteScroll" aria-label="Цветовая гамма Однотонная (листайте)">
-          <div class="monotonePaletteItem" role="img" aria-label="Терракот" style="background-image:url('assets/monotone_palette/monotone_palette_01.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Красный" style="background-image:url('assets/monotone_palette/monotone_palette_02.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Коричневый" style="background-image:url('assets/monotone_palette/monotone_palette_03.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Жёлтый-яркий" style="background-image:url('assets/monotone_palette/monotone_palette_04.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Светло-коричневый" style="background-image:url('assets/monotone_palette/monotone_palette_05.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Белый" style="background-image:url('assets/monotone_palette/monotone_palette_06.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Светло-серый" style="background-image:url('assets/monotone_palette/monotone_palette_07.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Графит" style="background-image:url('assets/monotone_palette/monotone_palette_08.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Жёлтый (горчичный)" style="background-image:url('assets/monotone_palette/monotone_palette_09.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Черный" style="background-image:url('assets/monotone_palette/monotone_palette_10.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Серые оттенки" style="background-image:url('assets/monotone_palette/monotone_palette_11.webp')"></div>
-          <div class="monotonePaletteItem" role="img" aria-label="Красный яркий" style="background-image:url('assets/monotone_palette/monotone_palette_12.webp')"></div>
-
-
+          <div class="monotonePaletteItem" role="img" aria-label="Белый" style="background-image:url('assets/monotone_palette/monotone_palette_01.webp')"></div>
+          <div class="monotonePaletteItem" role="img" aria-label="Серые оттенки" style="background-image:url('assets/monotone_palette/monotone_palette_02.webp')"></div>
+          <div class="monotonePaletteItem" role="img" aria-label="Жёлтый-яркий" style="background-image:url('assets/monotone_palette/monotone_palette_03.webp')"></div>
+          <div class="monotonePaletteItem" role="img" aria-label="Терракот" style="background-image:url('assets/monotone_palette/monotone_palette_04.webp')"></div>
+          <div class="monotonePaletteItem" role="img" aria-label="Красный" style="background-image:url('assets/monotone_palette/monotone_palette_05.webp')"></div>
+          <div class="monotonePaletteItem" role="img" aria-label="Коричневый" style="background-image:url('assets/monotone_palette/monotone_palette_06.webp')"></div>
           </div>
         </div>
 
@@ -168,13 +160,13 @@
           </button>
         </div>
 
-        <div class="sectionTitle">Выберите цвет и жмите на кнопку</div>
+        <div class="sectionTitle">Цвета и поверхности</div>
         <div class="swatchRow" id="colorRow"></div>
       </div>
       </div>
 
       <footer class="detailCta">
-        <button id="btnViewAR" class="btnPrimary" type="button"><span class="btnPrimaryText">Магия Актив Групп</span><img class="btnPrimaryLogo" src="assets/ui/active_group_logo.png" alt="Актив Групп" /></button>
+        <button id="btnViewAR" class="btnPrimary" type="button">Посмотреть в AR</button>
       </footer>
     </section>
 
