--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <header class="appHeader">
         <button id="btnCatalogBack" class="iconCircle hidden" aria-label="Назад">←</button>
         <div class="headerTitle headerTitle--withLogo">ФОРМЫ АКТИВ ГРУПП <img class="headerTitleLogo" src="assets/ui/active_group_logo.png" alt="" /></div>
-        <button id="btnFilter" class="iconCircle ghost" aria-label="Фильтр">⛭</button>
+        <!-- removed: non-functional UI icon (requested) -->
       </header>
 
       <div class="catalogWrap">
@@ -58,7 +58,7 @@
     <section id="screenDetail" class="screen" aria-label="Детали" hidden>
       <div class="detailScroll">
       <header class="detailTop">
-        <button id="btnDetailBack" class="iconCircle backBlue" aria-label="Назад">←</button>
+        <button id="btnDetailBack" class="backText" aria-label="Назад">«</button>
         <div class="detailTopTitle" id="detailTitle">—</div>
       </header>
 
@@ -181,7 +181,7 @@
     <!-- Экран 3: AR -->
     <section id="screenAR" class="screen" aria-label="AR" hidden>
       <header class="arTop">
-        <button id="btnArBack" class="iconCircle backBlue" aria-label="Назад">←</button>
+        <button id="btnArBack" class="backText" aria-label="Назад">«</button>
         <div class="arTopText">
           <div id="arProductTitle" class="arTitle">—</div>
           <div id="arArea" class="arArea">—</div>
