--- a/index.html
+++ b/index.html
@@ -64,15 +64,12 @@
             <div class="bottomTitle">Формы</div>
             <div id="shapesList" class="hscroll hscroll--shapes"></div>
           </div>
-          <div class="bottomSection">
-            <div class="bottomTitle">Текстуры</div>
-            <div id="texturesList" class="hscroll hscroll--textures"></div>
-          </div>
         </div>
-</div>
-</section>
+
+      </section>
 
       <aside class="sidePane">
+
         <div class="panel">
           <div class="panel__title">Фото</div>
           <div class="panel__body">
@@ -84,6 +81,13 @@
             <div class="note">
               Для стабильности фото приводится к размеру ≤ 3072px по длинной стороне (интерактивный режим).
             </div>
+          </div>
+        </div>
+
+        <div class="panel panel--textures" id="texturesPanel">
+          <div class="panel__title">Текстуры</div>
+          <div class="panel__body panel__body--textures">
+            <div id="texturesList" class="texturesGrid"></div>
           </div>
         </div>
 
@@ -110,8 +114,6 @@
             </div>
           </div>
         </div>
-
-        
 
 
         
