--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         <div class="canvasToolbar">
           <div class="toolGroup">
             <button class="btn btn--ghost" id="modePhoto">Фото</button>
-            <button class="btn btn--ghost" id="modePlane">Плоскость</button>
-            <button class="btn btn--ghost" id="modeContour">Контур</button>
+                        <button class="btn btn--ghost" id="modeContour">Контур</button>
             <button class="btn btn--ghost" id="modeCutout">Вырез</button>
             <button class="btn btn--ghost" id="modeView">Просмотр</button>
           </div>
@@ -110,7 +109,7 @@
             <div id="cutoutsList" class="list"></div>
 
             <div class="note">
-              MVP: одна плоскость пола на проект; зон и вырезов может быть много.
+              Плоскость пола определяется автоматически по контуру (без отдельного шага). Зон и вырезов может быть много.
             </div>
           </div>
         </div>
