--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="stepper" id="stepper">
       <div class="step step--active" data-step="photo">1 Фото</div>
-      <div class="step" data-step="zones">2 Зоны</div>
+            <div class="step" data-step="zones">2 Зоны</div>
       <div class="step" data-step="cutouts">3 Вырезы</div>
       <div class="step" data-step="export">4 Сохранить</div>
     </div>
@@ -38,6 +38,7 @@
           <div class="toolGroup">
             <button class="btn btn--ghost" id="undoBtn" title="Undo (Ctrl+Z)">Undo</button>
             <button class="btn btn--ghost" id="redoBtn" title="Redo (Ctrl+Y)">Redo</button>
+            <button class="btn btn--ghost" id="resetPlaneBtn">Сброс плоскости</button>
             <button class="btn btn--ghost" id="resetZoneBtn">Сброс зоны</button>
           </div>
 
