--- a/index.html
+++ b/index.html
@@ -143,7 +143,18 @@
               </select>
             </label>
 
-            <div class="note">
+            
+
+            <label class="field">
+              <span>Перспектива</span>
+              <input type="range" min="0" max="1" step="0.01" id="perspectiveRange" />
+            </label>
+            <label class="field">
+              <span>Горизонт</span>
+              <input type="range" min="-1" max="1" step="0.01" id="horizonRange" />
+            </label>
+
+<div class="note">
               Итерация 1: текстура тайлится в координатах изображения и клипится по контуру+вырезам (без перспективы).
               Следующая итерация: перспективная укладка по плоскости пола (homography/WebGL) без изменения UI/данных.
             </div>
