--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
   <script src="js/state.js"></script>
   <script src="js/api.js"></script>
+  <script src="js/webgl_plane.js"></script>
   <script src="js/editor.js"></script>
   <script src="js/app.js"></script>
 </body>
