--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         
         <div class="canvasWrap" id="canvasWrap">
+          <canvas id="glCanvas"></canvas>
           <canvas id="editorCanvas"></canvas>
           <div class="uploadOverlay" id="uploadOverlay">
             <div class="uploadOverlay__box">
@@ -191,7 +192,7 @@
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
   <script src="js/state.js"></script>
   <script src="js/api.js"></script>
-  <script src="js/webgl_plane.js"></script>
+  <script src="js/webgl_compositor.js"></script>
   <script src="js/editor.js"></script>
   <script src="js/app.js"></script>
 </body>
