--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
+  <link rel="stylesheet" href="css/styles.css?v=iter2_1" />
 </head>
 <body>
   <div class="app">
@@ -190,10 +191,10 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js"></script>
-  <script src="js/api.js"></script>
-  <script src="js/webgl_compositor.js"></script>
-  <script src="js/editor.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/state.js?v=iter2_1"></script>
+  <script src="js/api.js?v=iter2_1"></script>
+  <script src="js/webgl_compositor.js?v=iter2_1"></script>
+  <script src="js/editor.js?v=iter2_1"></script>
+  <script src="js/app.js?v=iter2_1"></script>
 </body>
 </html>
