--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_3_2_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_12_0" />
 </head>
 <body>
   <div class="app">
@@ -148,8 +148,13 @@
             
 
             <label class="field">
-              <span>Перспектива</span>
-              <input type="range" min="0" max="1" step="0.01" id="perspectiveRange" />
+              <span>Перспектива (влево — инверсия)</span>
+              <!--
+                Диапазон расширен до отрицательных значений.
+                Значение &lt; 0 используется как "инверсия направления" для 3D-плоскости/тайла.
+                По модулю значение влияет на силу перспективы как и раньше.
+              -->
+              <input type="range" min="-1" max="1" step="0.01" id="perspectiveRange" />
             </label>
             <label class="field">
               <span>Горизонт</span>
@@ -191,11 +196,11 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-    <script src="js/updater.js?v=iter2_3_2_0"></script>
-<script src="js/state.js?v=iter2_3_2_0"></script>
-  <script src="js/api.js?v=iter2_3_2_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_3_2_0"></script>
-  <script src="js/editor.js?v=iter2_3_2_0"></script>
-  <script src="js/app.js?v=iter2_3_2_0"></script>
+    <script src="js/updater.js?v=iter2_2_12_0"></script>
+<script src="js/state.js?v=iter2_2_12_0"></script>
+  <script src="js/api.js?v=iter2_2_12_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_12_0"></script>
+  <script src="js/editor.js?v=iter2_2_12_0"></script>
+  <script src="js/app.js?v=iter2_2_12_0"></script>
 </body>
 </html>
