--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_18_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_19_0" />
 </head>
 <body>
   <div class="app">
@@ -27,6 +27,14 @@
     </div>
 
     <main class="main">
+      <aside class="texturesPane">
+
+
+        <div class="panel panel--textures" id="texturesPanel">
+          <div class="panel__title">Текстуры</div>
+          
+      </aside>
+
       <section class="canvasPane">
         <div class="canvasToolbar">
           <div class="toolGroup">
@@ -82,10 +90,7 @@
             </div>
           </div>
         </div>
-
-        <div class="panel panel--textures" id="texturesPanel">
-          <div class="panel__title">Текстуры</div>
-          <div class="panel__body panel__body--textures">
+<div class="panel__body panel__body--textures">
             <div id="texturesList" class="texturesGrid"></div>
           </div>
         </div>
@@ -200,12 +205,12 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-    <script src="js/updater.js?v=iter2_2_18_0"></script>
-<script src="js/state.js?v=iter2_2_18_0"></script>
-  <script src="js/api.js?v=iter2_2_18_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_18_0"></script>
-  <script src="js/editor.js?v=iter2_2_18_0"></script>
-  <script src="js/app.js?v=iter2_2_18_0"></script>
+    <script src="js/updater.js?v=iter2_2_19_0"></script>
+<script src="js/state.js?v=iter2_2_19_0"></script>
+  <script src="js/api.js?v=iter2_2_19_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_19_0"></script>
+  <script src="js/editor.js?v=iter2_2_19_0"></script>
+  <script src="js/app.js?v=iter2_2_19_0"></script>
 
     <div class="field">
       <label>Контур</label>
