--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_21_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_22_0" />
 </head>
 <body>
   <div class="app">
@@ -27,7 +27,7 @@
     </div>
 
     <main class="main">
-      <aside class="leftPane">
+      <aside class="leftPane" id="leftPane">
 
 
         <div class="panel panel--textures" id="texturesPanel">
@@ -44,7 +44,6 @@
             </div>
             
       </aside>
-
 
       <section class="canvasPane">
         <div class="canvasToolbar">
@@ -215,12 +214,12 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-    <script src="js/updater.js?v=iter2_2_21_0"></script>
-<script src="js/state.js?v=iter2_2_21_0"></script>
-  <script src="js/api.js?v=iter2_2_21_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_21_0"></script>
-  <script src="js/editor.js?v=iter2_2_21_0"></script>
-  <script src="js/app.js?v=iter2_2_21_0"></script>
+    <script src="js/updater.js?v=iter2_2_22_0"></script>
+<script src="js/state.js?v=iter2_2_22_0"></script>
+  <script src="js/api.js?v=iter2_2_22_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_22_0"></script>
+  <script src="js/editor.js?v=iter2_2_22_0"></script>
+  <script src="js/app.js?v=iter2_2_22_0"></script>
 
     <div class="field">
       <label>Контур</label>
