--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_30_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_32_0" />
 </head>
 <body>
   <div class="app">
@@ -137,7 +137,16 @@
               <button id="toggleContourBtn" type="button" class="btn btn--ghost">Скрыть контур</button>
             </div>
 
-            
+
+            <div class="field">
+              <label>Premium Ultra</label>
+              <label class="chkline">
+                <input type="checkbox" id="aiUltraChk" checked />
+                <span>Улучшенный реализм (Ultra)</span>
+              </label>
+              <div id="aiStatusText" class="note note--compact"></div>
+            </div>
+
           </div>
         </div>
 
@@ -197,11 +206,12 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js?v=iter2_2_30_0"></script>
-  <script src="js/updater.js?v=iter2_2_30_0"></script>
-  <script src="js/api.js?v=iter2_2_30_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_30_0"></script>
-  <script src="js/editor.js?v=iter2_2_30_0"></script>
-  <script src="js/app.js?v=iter2_2_30_0"></script>
+  <script src="js/state.js?v=iter2_2_32_0"></script>
+  <script src="js/updater.js?v=iter2_2_32_0"></script>
+  <script src="js/ai_ultra_pipeline.js?v=iter2_2_32_0"></script>
+  <script src="js/api.js?v=iter2_2_32_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_32_0"></script>
+  <script src="js/editor.js?v=iter2_2_32_0"></script>
+  <script src="js/app.js?v=iter2_2_32_0"></script>
 </body>
 </html>
