--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_39_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_40_0" />
 </head>
 <body>
   <div class="app">
@@ -150,6 +150,19 @@
                 <span>Улучшенный реализм (Ultra)</span>
               </label>
               <div id="aiStatusText" class="note note--compact"></div>
+
+              <!-- Premium: interactive occlusion (tile under objects) -->
+              <label class="chkline" style="margin-top:8px">
+                <input type="checkbox" id="aiOccChk" checked />
+                <span>Перекрытия (объекты)</span>
+              </label>
+              <div class="row" style="gap:8px; flex-wrap:wrap; margin-top:6px">
+                <button id="aiOccPickBtn" type="button" class="btn btn--ghost" title="Клик по объекту на фото, чтобы плитка не накладывалась на него">Выделить объект</button>
+                <button id="aiOccClearBtn" type="button" class="btn btn--ghost" title="Очистить все исключения">Очистить</button>
+              </div>
+              <div class="note note--compact" id="aiOccHint" style="margin-top:6px; display:none">
+                Режим выделения: клик по объекту на фото. Shift+клик — убрать выделение.
+              </div>
             </div>
 
           </div>
@@ -211,12 +224,12 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js?v=iter2_2_39_0"></script>
-  <script src="js/updater.js?v=iter2_2_39_0"></script>
-  <script src="js/ai_ultra_pipeline.js?v=iter2_2_39_0"></script>
-  <script src="js/api.js?v=iter2_2_39_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_39_0"></script>
-  <script src="js/editor.js?v=iter2_2_39_0"></script>
-  <script src="js/app.js?v=iter2_2_39_0"></script>
+  <script src="js/state.js?v=iter2_2_40_0"></script>
+  <script src="js/updater.js?v=iter2_2_40_0"></script>
+  <script src="js/ai_ultra_pipeline.js?v=iter2_2_40_0"></script>
+  <script src="js/api.js?v=iter2_2_40_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_40_0"></script>
+  <script src="js/editor.js?v=iter2_2_40_0"></script>
+  <script src="js/app.js?v=iter2_2_40_0"></script>
 </body>
 </html>
