--- a/index.html
+++ b/index.html
@@ -224,12 +224,13 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js?v=iter2_2_45_0"></script>
-  <script src="js/updater.js?v=iter2_2_45_0"></script>
-  <script src="js/ai_ultra_pipeline.js?v=iter2_2_45_0"></script>
-  <script src="js/api.js?v=iter2_2_45_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_45_0"></script>
-  <script src="js/editor.js?v=iter2_2_45_0"></script>
-  <script src="js/app.js?v=iter2_2_45_0"></script>
+  <script src="js/state.js?v=iter2_2_46_0"></script>
+  <script src="js/updater.js?v=iter2_2_46_0"></script>
+  <script src="js/ai_ultra_pipeline.js?v=iter2_2_46_0"></script>
+  <script src="js/ai_auto_calib.js?v=iter2_2_46_0"></script>
+  <script src="js/api.js?v=iter2_2_46_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_46_0"></script>
+  <script src="js/editor.js?v=iter2_2_46_0"></script>
+  <script src="js/app.js?v=iter2_2_46_0"></script>
 </body>
 </html>
