--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_54_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_58_0" />
 </head>
 <body>
   <div class="app">
@@ -149,6 +149,11 @@
                 <input type="checkbox" id="aiUltraChk" checked />
                 <span>Улучшенный реализм (Ultra)</span>
               </label>
+              <label class="chkline" style="margin-top:8px">
+                <input type="checkbox" id="aiPremiumFxChk" checked />
+                <span>Premium FX (свет/тени/стык)</span>
+              </label>
+
               <div id="aiStatusText" class="note note--compact"></div>
 
               <!-- Premium: interactive occlusion (tile under objects) -->
@@ -224,13 +229,13 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js?v=iter2_2_54_0"></script>
-  <script src="js/updater.js?v=iter2_2_54_0"></script>
-  <script src="js/ai_ultra_pipeline.js?v=iter2_2_54_0"></script>
-  <script src="js/ai_auto_calib.js?v=iter2_2_54_0"></script>
-  <script src="js/api.js?v=iter2_2_54_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_54_0"></script>
-  <script src="js/editor.js?v=iter2_2_54_0"></script>
-  <script src="js/app.js?v=iter2_2_54_0"></script>
+  <script src="js/state.js?v=iter2_2_58_0"></script>
+  <script src="js/updater.js?v=iter2_2_58_0"></script>
+  <script src="js/ai_ultra_pipeline.js?v=iter2_2_58_0"></script>
+  <script src="js/ai_auto_calib.js?v=iter2_2_58_0"></script>
+  <script src="js/api.js?v=iter2_2_58_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_58_0"></script>
+  <script src="js/editor.js?v=iter2_2_58_0"></script>
+  <script src="js/app.js?v=iter2_2_58_0"></script>
 </body>
 </html>
