--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_63_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_56_0" />
 </head>
 <body>
   <div class="app">
@@ -149,11 +149,6 @@
                 <input type="checkbox" id="aiUltraChk" checked />
                 <span>Улучшенный реализм (Ultra)</span>
               </label>
-              <label class="chkline" style="margin-top:8px">
-                <input type="checkbox" id="aiPremiumFxChk" checked />
-                <span>Premium FX (свет/тени/стык)</span>
-              </label>
-
               <div id="aiStatusText" class="note note--compact"></div>
 
               <!-- Premium: interactive occlusion (tile under objects) -->
@@ -168,6 +163,31 @@
               <div class="note note--compact" id="aiOccHint" style="margin-top:6px; display:none">
                 Режим выделения: клик по объекту на фото. Shift+клик — убрать выделение.
               </div>
+
+              <div class="note" style="margin-top:10px">
+                <b>3D‑калибровка перспективы (Beta)</b><br />
+                Для профессиональной перспективы отметьте 4 линии: <i>A1+A2</i> — вдоль направления укладки (в глубину), <i>B1+B2</i> — поперёк.
+                После калибровки параметры «Перспектива/Горизонт» будут выставлены автоматически с сохранением правила: укладка всегда идёт снизу вверх.
+              </div>
+              <label class="chkline" style="margin-top:8px">
+                <input type="checkbox" id="calib3dEnableChk" />
+                <span>Включить режим калибровки</span>
+              </label>
+              <label class="chkline" style="margin-top:6px">
+                <input type="checkbox" id="calib3dApplyChk" checked />
+                <span>Применять к активной зоне</span>
+              </label>
+              <div class="row" style="gap:8px; flex-wrap:wrap; margin-top:6px">
+                <button id="calib3dA1Btn" type="button" class="btn btn--ghost">Линия A1</button>
+                <button id="calib3dA2Btn" type="button" class="btn btn--ghost">Линия A2</button>
+                <button id="calib3dB1Btn" type="button" class="btn btn--ghost">Линия B1</button>
+                <button id="calib3dB2Btn" type="button" class="btn btn--ghost">Линия B2</button>
+              </div>
+              <div class="row" style="gap:8px; flex-wrap:wrap; margin-top:6px">
+                <button id="calib3dResetBtn" type="button" class="btn btn--ghost">Сбросить</button>
+                <button id="calib3dExitBtn" type="button" class="btn btn--ghost">Выйти</button>
+              </div>
+              <div id="calib3dStatusText" class="note note--compact" style="margin-top:6px"></div>
             </div>
 
           </div>
@@ -229,13 +249,14 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js?v=iter2_2_63_0"></script>
-  <script src="js/updater.js?v=iter2_2_63_0"></script>
-  <script src="js/ai_ultra_pipeline.js?v=iter2_2_63_0"></script>
-  <script src="js/ai_auto_calib.js?v=iter2_2_63_0"></script>
-  <script src="js/api.js?v=iter2_2_63_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_63_0"></script>
-  <script src="js/editor.js?v=iter2_2_63_0"></script>
-  <script src="js/app.js?v=iter2_2_63_0"></script>
+  <script src="js/state.js?v=iter2_2_56_0"></script>
+  <script src="js/updater.js?v=iter2_2_56_0"></script>
+  <script src="js/ai_ultra_pipeline.js?v=iter2_2_56_0"></script>
+  <script src="js/ai_auto_calib.js?v=iter2_2_56_0"></script>
+  <script src="js/api.js?v=iter2_2_56_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_56_0"></script>
+  <script src="js/camera_calib.js?v=iter2_2_56_0"></script>
+  <script src="js/editor.js?v=iter2_2_56_0"></script>
+  <script src="js/app.js?v=iter2_2_56_0"></script>
 </body>
 </html>
