--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_143_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_145_0" />
 </head>
 <body>
   <div class="app">
@@ -139,6 +139,15 @@
               <span>Поворот (rotation)</span>
               <input type="range" min="0" max="360" step="1" id="rotRange" />
             </label>
+
+            <label class="field">
+              <span>Сдвиг шва U (offsetU)</span>
+              <input type="range" min="-2" max="2" step="0.01" id="offsetURange" />
+            </label>
+            <label class="field">
+              <span>Сдвиг шва V (offsetV)</span>
+              <input type="range" min="-2" max="2" step="0.01" id="offsetVRange" />
+            </label>
             <label class="field">
               <span>Интенсивность (opacity)</span>
               <input type="range" min="0" max="1" step="0.01" id="opacityRange" />
@@ -228,6 +237,7 @@
           <div class="panel__body">
             <div class="row">
               <button class="btn" id="addZoneBtn">Добавить зону</button>
+              <button class="btn btn--ghost" id="splitZoneBtn" title="Выделить подзону внутри мастер-зоны (вырез + новая зона)">Разделить зону</button>
               <button class="btn btn--ghost" id="dupZoneBtn">Дублировать</button>
               <button class="btn btn--danger" id="delZoneBtn">Удалить</button>
             </div>
@@ -284,14 +294,14 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js?v=iter2_2_143_0"></script>
-  <script src="js/updater.js?v=iter2_2_143_0"></script>
-  <script src="js/ai_ultra_pipeline.js?v=iter2_2_143_0"></script>
-  <script src="js/ai_auto_calib.js?v=iter2_2_143_0"></script>
-  <script src="js/api.js?v=iter2_2_143_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_143_0"></script>
-  <script src="js/camera_calib.js?v=iter2_2_143_0"></script>
-  <script src="js/editor.js?v=iter2_2_143_0"></script>
-  <script src="js/app.js?v=iter2_2_143_0"></script>
+  <script src="js/state.js?v=iter2_2_145_0"></script>
+  <script src="js/updater.js?v=iter2_2_145_0"></script>
+  <script src="js/ai_ultra_pipeline.js?v=iter2_2_145_0"></script>
+  <script src="js/ai_auto_calib.js?v=iter2_2_145_0"></script>
+  <script src="js/api.js?v=iter2_2_145_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_145_0"></script>
+  <script src="js/camera_calib.js?v=iter2_2_145_0"></script>
+  <script src="js/editor.js?v=iter2_2_145_0"></script>
+  <script src="js/app.js?v=iter2_2_145_0"></script>
 </body>
 </html>
