--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_157_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_158_0" />
 </head>
 <body>
   <div class="app">
@@ -278,10 +278,10 @@
           <div class="panel__title">Участки мощения</div>
           <div class="panel__body">
             <div class="row">
-              <button class="btn" id="addZoneBtn">Добавить участок</button>
-              <button class="btn btn--ghost" id="splitZoneBtn" title="Выделить подзону внутри мастер-зоны (вырез + новая зона)">Разделить зону</button>
-              <button class="btn btn--ghost" id="dupZoneBtn">Дублировать</button>
-              <button class="btn btn--danger" id="delZoneBtn">Удалить</button>
+              <button class="btn" id="addZoneBtn" hidden>Добавить участок</button>
+              <button class="btn btn--ghost" id="splitZoneBtn" title="Выделить подзону внутри мастер-зоны (вырез + новая зона)" hidden>Разделить зону</button>
+              <button class="btn btn--ghost" id="dupZoneBtn" hidden>Дублировать</button>
+              <button class="btn btn--danger" id="delZoneBtn" hidden>Удалить</button>
             </div>
 
             <div class="row">
@@ -336,14 +336,14 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js?v=iter2_2_157_0"></script>
-  <script src="js/updater.js?v=iter2_2_157_0"></script>
-  <script src="js/ai_ultra_pipeline.js?v=iter2_2_157_0"></script>
-  <script src="js/ai_auto_calib.js?v=iter2_2_157_0"></script>
-  <script src="js/api.js?v=iter2_2_157_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_157_0"></script>
-  <script src="js/camera_calib.js?v=iter2_2_157_0"></script>
-  <script src="js/editor.js?v=iter2_2_157_0"></script>
-  <script src="js/app.js?v=iter2_2_157_0"></script>
+  <script src="js/state.js?v=iter2_2_158_0"></script>
+  <script src="js/updater.js?v=iter2_2_158_0"></script>
+  <script src="js/ai_ultra_pipeline.js?v=iter2_2_158_0"></script>
+  <script src="js/ai_auto_calib.js?v=iter2_2_158_0"></script>
+  <script src="js/api.js?v=iter2_2_158_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_158_0"></script>
+  <script src="js/camera_calib.js?v=iter2_2_158_0"></script>
+  <script src="js/editor.js?v=iter2_2_158_0"></script>
+  <script src="js/app.js?v=iter2_2_158_0"></script>
 </body>
 </html>
