--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_163_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_164_0" />
 </head>
 <body>
   <div class="app">
@@ -159,7 +159,7 @@
 		      <input type="range" min="5" max="13.5" step="0.1" id="scaleRange" />
             </label>
             
-ield" id="seamStepField">
+            <div class="field" id="seamStepField" hidden>
 	              <label>Подгонка швов</label>
 	              <div class="seamStepRow">
 	                <span class="seamStepLabel">Шаг</span>
@@ -198,7 +198,7 @@ ield" id="seamStepField">
               <span>Плотная заливка (100%)</span>
               <input type="checkbox" id="opaqueFillChk" />
             </label>
-            <label class="field">
+            <label class="field" hidden>
               <span>Режим наложения</span>
               <select id="blendSelect" style="display:none">
                 <option value="source-over">Normal</option>
@@ -338,14 +338,14 @@ ield" id="seamStepField">
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js?v=iter2_2_163_0"></script>
-  <script src="js/updater.js?v=iter2_2_163_0"></script>
-  <script src="js/ai_ultra_pipeline.js?v=iter2_2_163_0"></script>
-  <script src="js/ai_auto_calib.js?v=iter2_2_163_0"></script>
-  <script src="js/api.js?v=iter2_2_163_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_163_0"></script>
-  <script src="js/camera_calib.js?v=iter2_2_163_0"></script>
-  <script src="js/editor.js?v=iter2_2_163_0"></script>
-  <script src="js/app.js?v=iter2_2_163_0"></script>
+  <script src="js/state.js?v=iter2_2_164_0"></script>
+  <script src="js/updater.js?v=iter2_2_164_0"></script>
+  <script src="js/ai_ultra_pipeline.js?v=iter2_2_164_0"></script>
+  <script src="js/ai_auto_calib.js?v=iter2_2_164_0"></script>
+  <script src="js/api.js?v=iter2_2_164_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_164_0"></script>
+  <script src="js/camera_calib.js?v=iter2_2_164_0"></script>
+  <script src="js/editor.js?v=iter2_2_164_0"></script>
+  <script src="js/app.js?v=iter2_2_164_0"></script>
 </body>
 </html>
