--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Фото‑конструктор мощения — MVP</title>
   <!-- cache-busting query param is required for GitHub Pages + Tilda iframe deployments -->
-  <link rel="stylesheet" href="css/styles.css?v=iter2_2_164_0" />
+  <link rel="stylesheet" href="css/styles.css?v=iter2_2_165_0" />
 </head>
 <body>
   <div class="app">
@@ -205,7 +205,7 @@
               </select>
             </label>
 
-            <label class="field" hidden>
+            <label class="field" id="perspectiveField" hidden>
               <span>Перспектива (влево — инверсия)</span>
               <input type="range" min="-1" max="1" step="0.01" id="perspectiveRange" />
             </label><div class="field">
@@ -338,14 +338,14 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.4/dist/earcut.min.js"></script>
-  <script src="js/state.js?v=iter2_2_164_0"></script>
-  <script src="js/updater.js?v=iter2_2_164_0"></script>
-  <script src="js/ai_ultra_pipeline.js?v=iter2_2_164_0"></script>
-  <script src="js/ai_auto_calib.js?v=iter2_2_164_0"></script>
-  <script src="js/api.js?v=iter2_2_164_0"></script>
-  <script src="js/webgl_compositor.js?v=iter2_2_164_0"></script>
-  <script src="js/camera_calib.js?v=iter2_2_164_0"></script>
-  <script src="js/editor.js?v=iter2_2_164_0"></script>
-  <script src="js/app.js?v=iter2_2_164_0"></script>
+  <script src="js/state.js?v=iter2_2_165_0"></script>
+  <script src="js/updater.js?v=iter2_2_165_0"></script>
+  <script src="js/ai_ultra_pipeline.js?v=iter2_2_165_0"></script>
+  <script src="js/ai_auto_calib.js?v=iter2_2_165_0"></script>
+  <script src="js/api.js?v=iter2_2_165_0"></script>
+  <script src="js/webgl_compositor.js?v=iter2_2_165_0"></script>
+  <script src="js/camera_calib.js?v=iter2_2_165_0"></script>
+  <script src="js/editor.js?v=iter2_2_165_0"></script>
+  <script src="js/app.js?v=iter2_2_165_0"></script>
 </body>
 </html>
